base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stump
  namespace: stump
  labels:
    app.kubernetes.io/name: stump
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: stump
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stump
    spec:
      containers:
        - name: stump
          image: "aaronleopold/stump:nightly"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 10801
              protocol: TCP
          volumeMounts:
            - name: stump-data
              mountPath: /config
            - name: stump-library
              mountPath: /books
      volumes:
        - name: stump-data
          persistentVolumeClaim:
            claimName: stump-data-pvc
        - name: stump-library
          hostPath:
            path: /media/books
            type: Directory
