base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stump
  namespace: stump
  labels:
    app.kubernetes.io/name: stump
spec:
  ports:
    - port: 80
      targetPort: 10801
      protocol: TCP
  selector:
    app.kubernetes.io/name: stump
