base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: stump
  namespace: stump
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`stump.hl.ancalagon.black`)
      priority: 10
      services:
        - name: stump
          port: 80
  tls:
    certResolver: default
